lessons/12-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-sample-service
spec:
  selector:
    app: web
    env: dev
  ports:
    - port: 80
      targetPort: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-sample-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      env: dev
  template:
    metadata:
      name: ingress-samle-pod
      labels:
        app: web
        env: dev
    spec:
      containers:
        - name: nginx
          image: nginx:1.17.3-alpine

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sample-ingress
  annotations:
    kubernates.io/ingress.class: "nginx"
    nginx.ingress.kubernates.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-sample-service
                port:
                  number: 80
